<resources>
    <string name="app_name">RentApp</string>
    <string name="navigation_drawer_open">Abrir Navegacion drawer</string>
    <string name="navigation_drawer_close">Cerrar Navegacion drawer</string>
    <string name="nav_header_title">Nombre del Usuario</string>
    <string name="nav_header_subtitle">correo@gmail.com</string>
    <string name="nav_header_desc">Navegacion </string>
    <string name="action_settings">Configuraciones</string>
    <string name="ir_al">Ir al menu</string>


    <string name="menu_Inicio">Inicio</string>
    <string name="menu_arrendatario">Arrendatario</string>
    <string name="menu_usuario">Usuario</string>
    <string name="Editar">Editar Perfil</string>
    <string name="buscar">Buscar</string>
    <string name="buscar_casa">Buscar Casa</string>
    <string name="perfil_usuario">Perfil</string>
    <string name="casas_favoritas">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="iniciar_sesions">Iniciar Sesión</string>
    <string name="cedula">Cedula</string>
    <string name="numero_telefono">Numero de Teléfono</string>
    <string name="movil">Móvil</string>
    <string name="anadir_foto_perfil">Añade una Foto de Perfil</string>
    <string name="editar_foto_perfil">Edita tu Foto de Perfil</string>

    <string-array name="departamentos">
        <item>Chinandega</item>
        <item>León</item>
        <item>Managua</item>
        <item>Masaya</item>
        <item>Granada</item>
        <item>Carazo</item>
        <item>Rivas</item>
        <item>Nueva Segovia</item>
        <item>Madriz</item>
        <item>Estelí</item>
        <item>Boaaco</item>
        <item>Jinotega</item>
        <item>Matagalpa</item>
        <item>Chontales</item>
        <item>Río San Juan</item>
        <item>Región Autónoma de la Costa Caribe Norte</item>
        <item>Región Autónoma de la Costa Caribe Sur</item>
    </string-array>
</resources>