<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivFotoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/transparent"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:fontFamily="@font/palanquin_thin"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/padding_standard"
        app:layout_constraintStart_toEndOf="@id/ivFotoPerfil"
        android:layout_marginStart="@dimen/padding_half"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivFotoPerfil"
        app:layout_constraintTop_toBottomOf="@id/tvNombreUsuario"
        android:layout_marginStart="@dimen/padding_half"
        android:layout_marginTop="@dimen/padding_standard"
        android:textStyle="bold"
        android:fontFamily="@font/palanquin_thin"
        android:textSize="@dimen/default_text_size"
        android:background="@color/transparent"
        android:text="@string/nav_header_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
